--- a/service.html
+++ b/service.html
@@ -18,6 +18,7 @@
     <link rel="icon" href="rdcimages/logo.png">
 </head>
 <body>
+  <div class="animate-bottom">
   <div id="introo"></div>
   <nav>
   <div id="intro">
@@ -40,7 +41,7 @@
  
   <div class="carouselattri">
     <div class="background">
-      <div class="intro">
+      <div id="introooo">
         <h1>Rhodora D. Cata Lying in Clinic</h1>
         <h2>Services</h2>
     </div>
@@ -174,6 +175,7 @@
           </div>
     </div>
   </footer>
+</div>
   <script>
     $(document).ready(function() {
             $(".nav").on("click", function() {
