--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
     <title>Rhodora D. Cata Lying Clinic</title>
     <link rel="icon" href="rdcimages/logo.png">
 </head>
-<body id="introo">
+<body  id="introo" onload="myFunction()" style="margin:0;">
+  <div id="loader"></div>
+  <div style="display:none;" id="myDiv" class="animate-bottom">
     <div class="carouselattri">
             <div class="background">
                     <div class="intro">
@@ -84,6 +86,7 @@
               </div>
         </div>
       </footer>
+    </div>
       <script>
         const appear3 = document.querySelector('.appear3'); 
 const cb3 = function(entries){
@@ -100,5 +103,17 @@ io3.observe(appear3);
       <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-</body>
+      <script>
+        var myVar;
+        
+        function myFunction() {
+          myVar = setTimeout(showPage, 3000);
+        }
+        
+        function showPage() {
+          document.getElementById("loader").style.display = "none";
+          document.getElementById("myDiv").style.display = "block";
+        }
+        </script>
+    </body>
 </html>
