edited clinic history

--- a/about.html
+++ b/about.html
@@ -80,7 +80,7 @@
       <div class="card-header text-center" style="color: azure; font-family: 'Montserrat', sans-serif;">
         Clinic History
       </div>
-      <p>Rhodora D. Cata Lying in Clinic was founded in 2011. It's in Brgy San Lucas 2, San Pablo City, Laguna. The clinic exists because to the patience and hard work of Ms. Rhodora D. Cata, a resident of the mentioned location. Her passion and eagerness to assist others formed the clinic's basis. The clinic provides a variety of services with the goal of providing convenience and healthcare to the citizens of the barangay and its surrounding areas.</p>
+      <p>Rhodora D. Cata Lying in Clinic was established in 2011. The clinic is located at Brgy. San Lucas 2, San Pablo City, Laguna. The clinic exists because of the dedication and hard work of Ms. Rhodora D. Cata, a resident of the mentioned location. Her passion for helping others served as the clinic's foundation. The clinic provides a variety of services with the goal of providing convenience and affordable healthcare to the residents of the barangay and its surrounding areas.</p>
     </div>
   </div>
 </div>
